# mkdep

./: .gitignore  ChangeLog  Makefile.am  README  configure.ac  deps.c  depsfiles.c  filter.c  help.c  mkdep.c  mkdep.h  output.c  parsing.c  vpath.c
